Closed Bug 549891 Opened 15 years ago Closed 15 years ago

[OS X] Modifier flags aren't set on drag events

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a3

People

(Reporter: mstange, Assigned: mstange)

References

Details

Attachments

(1 file)

Attached patch v1Splinter Review
This is the Mac part of bug 474067 and would also fix bug 434210.
Attachment #430014 - Flags: review?(joshmoz)
Attachment #430014 - Flags: review?(joshmoz) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a3
Comment on attachment 430014 [details] [diff] [review] v1 I think we should take this on 1.9.2, too. No risk, and there's a manual testcase in bug 474067.
Attachment #430014 - Flags: approval1.9.2.2?
Comment on attachment 430014 [details] [diff] [review] v1 We can haz rollup patch with said testcase?
Attachment #430014 - Flags: approval1.9.2.2? → approval1.9.2.2-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: