Bug 549891 - Correctly set modifier flags on drag events. r=josh